# MotorBaseDeDatos

./: BloqueColision.cpp  BloqueColision.h  BloqueHashTable.cpp  BloqueHashTable.h  CMakeLists.txt  DB_MOTOR.cbp  DB_MOTOR.depend  DB_MOTOR.layout  Entry.cpp  Entry.h  Idx_Entry.cpp  Idx_Entry.h  Registro.cpp  Registro.h  bloque.cpp  bloque.h  bloquecampo.cpp  bloquecampo.h  bloquemaestro.cpp  bloquemaestro.h  bloqueregistro.cpp  bloqueregistro.h  bloquetabla.cpp  bloquetabla.h  campo.cpp  campo.h  datafile.cpp  datafile.h  jsonEstruct.cpp  jsonEstruct.h  main.cpp  manejadorbloques.cpp  manejadorbloques.h  manejadortablas.cpp  manejadortablas.h  nuevo  tabla.cpp  tabla.h
